--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "rust_api"
 version = "0.0.1"
 edition = "2018"
 [dependencies]
-actix-web = "3"
+actix-web = { version = "3", features = ["openssl"] }
+openssl = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+env_logger = "0.8"
+base64 = "0.13.0"
